--- a/StudentExceptions/readme
+++ b/StudentExceptions/readme
@@ -1,1 +1,1 @@
-text here
+Implements exception handling with basic REST controller. Leverages @ExceptionHandler to return a ResponseEntity which Jackson automatically convers into a JSON.
